kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-app-service
  namespace: cicd
spec:
  selector:
    app: cicd-app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
