kubernetes/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-cicd-prefix
  namespace: cicd
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /cicd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd-app-ingress
  namespace: cicd
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: cicd-strip-cicd-prefix@kubernetescrd
spec:
  rules:
    - host: cicd.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-app-service
                port:
                  number: 5000
    - http:
        paths:
          - path: /cicd
            pathType: Prefix
            backend:
              service:
                name: cicd-app-service
                port:
                  number: 5000
